[package]
name = "wordsearch"
version = "0.1.0"
edition = "2021"
authors = ["Ewgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde_yaml = "0.9.25"
widestring = "1.0.2"

[dependencies.serde]
version = "1.0.189"
features = ["derive", "serde_derive", "rc"]
